# nflalgorithm

./: .claudeignore  .cursorrules  .dockerignore  .editorconfig  .env.example  .env.render.example  .gitignore  2024_nfl_projections.csv  AGENTS.md  CACHE_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CLAUDE_MD_VALIDATION_REPORT.md  CLONE_COMMANDS.md  CONTEXT7_USAGE.md  CONTRIBUTING.md  Dockerfile.api  FINAL_CLAUDE_MD_SUCCESS.md  FINAL_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  SUPABASE_IMPLEMENTATION_SUMMARY.md  UV_MIGRATION_NOTES.md  advanced_model_validation.py  advanced_model_validation_fixed.py  analyze_collected_data.py  betting_utils.py  cache_manager.py  claude.md  code_analysis_report.md  collect_historical_data.py  collect_recent_data.py  confidence_engine.py  config.example.py  config.py  context7-config.json  context7_demo.py  cross_season_validation.py  current_prop_lines.csv  (+44 more)
agents/: __init__.py  base_agent.py  coordinator.py  market_bias_agent.py  model_diagnostics_agent.py  nba_base_agent.py  nba_coordinator.py  nba_market_bias_agent.py  nba_model_diagnostics_agent.py  nba_odds_agent.py  nba_risk_agent.py  odds_agent.py  risk_agent.py
api/: __init__.py  application.py  auth.py  cache.py  data_health.py  diagnostics.py  explainability.py  nba_explainability.py  nba_router.py  pipeline_router.py
config/: __init__.py  runtime.py
dashboard/: main_dashboard.py
data/: 2024_nfl_projections.csv  2024_nfl_rookies.csv  barttorvik_2026.csv  coaching_tournament_2026.csv  kenpom_2026.csv  team_experience_2026.csv  team_momentum_2026.csv  vegas_lines_2026.csv
docs/: ARCHITECTURE.md  CONSTRAINT_FIX_SUMMARY.md  DATA_RETENTION.md  FILE_ORGANIZATION.md  FIX_VERIFICATION_REPORT.md  MODEL_CARD.md  NEXT_STEPS_FIX_PLAYER_MATCHING.md  OPERATIONS.md  PIPELINE_STATE_MACHINE.md  PRODUCTION_READINESS.md  TROUBLESHOOTING.md  WEEK9_TRAINING_PLAN.md  deploy-render.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts
logs/: .gitkeep  validation_leaderboard.md  validation_results.csv
models/: __init__.py  best_model.joblib  label_encoder.joblib  scaler.joblib
pipeline_jobs/: __init__.py  cards.py  service.py  worker.py
pipelines/: __init__.py  nfl_contract.py  odds_validation.py  orchestrator.py
reports/: TRANSFORMATION_COMPLETE.md  enhanced_dashboard.html  quick_picks.md  value_bets.csv  value_bets.json  value_bets_enhanced.csv  week10.csv  week_10_prop_lines.csv  week_1_prop_lines.csv  weekly_value_report.html  weekly_value_report.md
scripts/: activate_betting.py  analyze_nov21.py  api_error_handler.py  archive_all.sh  backfill_line_accuracy.py  backtest_replay.py  build_player_mapping.py  cache_cli.py  cache_manager.py  data_validation.py  define_ncaab_bracket.py  dry_run_validation.py  enhanced_visualizer.py  evaluate_nfl_projections.py  execute_week9_plan.py  export_weekly_value.py  filter_engine.py  freshness_guard.py  health_check.py  ingest_nba_data.py  ingest_nba_injuries.py  ingest_ncaab_data.py  ingest_ncaab_modifiers.py  ingest_real_nfl_data.py  match_quality_report.py  materialize_value_view.py  monitoring.py  nba_optuna_tuning.py  nba_production_runner.py  nfl_optuna_tuning.py  pipeline_release_evidence.py  pipeline_scheduler.py  pipeline_soak.py  populate_nfl_data.py  populate_player_dim.py  populate_week13_actuals.py  preflight.py  prepare_nfl_week.py  production_runner.py  prop_line_scraper.py  (+26 more)
sports/: __init__.py  markets.py  nfl.py
templates/: enhanced_dashboard.html  ncaab_bracket.html.j2
tests/: conftest.py  simple_cache_test.py  test_agent_coordinator.py  test_api_contract.py  test_api_error_handler.py  test_api_preflight.py  test_augmentation_wr.py  test_auth_t0_2.py  test_backtest_replay.py  test_basic.py  test_cache.py  test_caching.py  test_confidence_engine.py  test_config_runtime.py  test_constraint_handling.py  test_container_startup.py  test_data_health.py  test_db_executemany.py  test_dry_run_validation.py  test_explainability.py  test_export_api.py  test_grading_utils.py  test_kelly_cap.py  (+80 more)
(+123 files in other folders)
