[project]
name = "nfl-algorithm"
version = "1.0.0"
description = "NFL player prop betting algorithm with ML models and dashboard"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "NFL Algorithm Team", email = "dev@nflalgorithm.com"}
]

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "optuna>=3.4.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "jinja2>=3.1.0",
    "rich>=13.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "nflreadpy>=0.1.5",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "email-validator>=2.3.0",
    "requests-cache>=1.3.0",
    "nba_api>=1.4.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

# [build-system]  # Disabled for simple script-based project
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration for optimal performance
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0", 
    "isort>=5.12.0",
    "mypy>=1.6.0",
]

# Optimize resolution and caching
index-strategy = "first-index"
keyring-provider = "disabled"  # Faster for local development

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # NFL project has mixed typing
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# Note: Build system disabled for script-based NFL algorithm project
# No wheel packaging needed - this is a collection of Python scripts
